OnboardingV2Minimal/force-app/main/default/objects/Validation_Failure__c/Validation_Failure__c.object-meta.xml
<CustomObject>
    <description>Logs onboarding validation failures with rule name, message, correlation IDs, and retry context.</description>
    <label>Validation Failure</label>
    <nameField>
        <displayFormat>VF-{00000}</displayFormat>
        <label>Validation Failure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validation Failure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>