OnboardingV2Minimal/force-app/main/default/objects/Validation_Failure__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Correlation identifier to tie related validation events/logs together.</description>
    <label>Correlation Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>