OnboardingV2Minimal/force-app/main/default/objects/Validation_Failure__c/fields/Requirement_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Field_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the field value that failed validation.</description>
    <label>Requirement Field Value</label>
    <referenceTo>Requirement_Field_Value__c</referenceTo>
    <relationshipLabel>Validation Failure</relationshipLabel>
    <relationshipName>Validation_Failures</relationshipName>
    <type>Lookup</type>
</CustomField>