OnboardingV2Minimal/force-app/main/default/objects/Validation_Failure__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <description>Name of the validation rule that failed.</description>
    <label>Rule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>